--- a/src/scss/mobile-header.scss
+++ b/src/scss/mobile-header.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   right: 0;
-  position: sticky;
+  position: fixed;
   display: flex;
   z-index: 3;
   align-items: center;
